[package]
name = "mactest"
version = "1.0.0"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
description = "Test possible mac floating point bug"
edition = "2021"
license = "MIT"

[lib]
name = "mactest"
crate-type = ["lib"]

[dependencies]
flume = "0.11"
speedy = { version = "0.8", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(unix)'.dependencies]
expanduser = "1.2"

[features]
default = ["speedy", "bincode", "json"]
speedy = ["dep:speedy"]
bincode = ["dep:bincode", "dep:serde", "dep:serde_derive"]
json = ["dep:serde_json", "dep:serde", "dep:serde_derive"]
